--- a/pizza-styles.css
+++ b/pizza-styles.css
@@ -1,25 +1,27 @@
 body {
-    background-color: cyan;
+    background-color: goldenrod;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
+    text-color: black;
+    
 
 }
 
 h1 {
-	font-size: 40px;
+	font-size: 60px;
 }
 
 h2 {
-	font-size: 30px;
+	font-size: 40px;
 }
 
 h3 {
-	font-size: 25px;
+	font-size: 30px;
 }
 
 .box {
 	margin: 0.75em;
-    padding: 1em;
+    padding: 0.5em;
     flex: 1;
     border: 2px solid black;
     border-radius: 0.5em;
@@ -50,13 +52,17 @@ h3 {
 }
 
 .contact-details {
-    background-color: goldenrod;
-    margin: 1em;
-    padding: 0.5em;
+    background-color: cyan;
+    margin: 0.5em;
+    padding: 0.25em;
     border: 2px solid black;
     border-radius: 0.5em;
 
 }
+
+.address {
+	flex: 1;
+ }
 
 .outer-border {
     border: 3px solid black;
